# toolsUse

./: README.md
execShellCmd/: execShellCmd.cpp  execShellCmdOut.cpp
getMaxPthread/: CMakeLists.txt  main.cpp
getOpt/: getOpt.cpp
sysconfig/: main.cpp
